kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-devops-demo
  namespace: default
  labels:
    app.kubernetes.io/instance: go-devops-demo
    app.kubernetes.io/name: app
    app.kubernetes.io/version: 1.0.0
    release: kube-prometheus-stack
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: go-devops-demo
    app.kubernetes.io/name: app
  type: ClusterIP
